# kellerwatt-sim

./: .coverage  .gitignore  .hfignore  DESIGN.md  Dockerfile  README.md  index.html  methodology.html  playground.html  pyproject.toml
.github/workflows/: deploy.yml
assets/: SiteNav-6vpi1PeN.js  SiteNav-B0sA1UQa.js  gate-Cn_QEVfo.css  gate-DwhMAn-w.js  linear-BB4jrQ9y.js  main-C7rUf5vd.js  main-Cv14QC2F.js  main-SI87xcxG.js  main-kC2cwu5x.js  methodology-C0DQcfWB.js  methodology-CVI-GxXQ.js  methodology-Cpvw261a.js  methodology-DGyXKtFt.js  playground-BGnUY8Uz.js  playground-C7dkA-Hz.js  playground-CBkm2QyD.js  playground-DpWdCgre.js  playground-U7z1F2r9.js
backend/: Dockerfile  main.py  requirements.txt
data/dispatch/: cap_100.json  cap_175.json  cap_250.json  cap_350.json  cap_450.json  cap_500.json
docs/: TESTING.md  codex-review-response.md  critique-and-risks.md  open-actions-for-team.md
docs/brand/: brand-guidelines.md  inspiration-research.md
engine/: __init__.py  backtest.py  contracts.py  data_load.py  dispatch.py  economics.py  export.py  metrics.py  params.py  solver.py
engine/schema/: sim_results.schema.json
engine/tests/: test_backtest.py  test_contracts.py  test_data_load.py  test_dispatch.py  test_economics.py  test_edge_cases.py  test_export.py  test_integration.py  test_metrics.py  test_params.py  test_properties.py  test_solver.py
scripts/: precompute_dispatch.py  validate_number.py
web/: README.md  ci-web.yml.example  index.html  methodology.html  package-lock.json  package.json  playground.html  vercel.json  vite.config.ts
(+55 files in other folders)
